Fixed main swiper overlapping next block in mobile

--- a/assets/sass/_swiper.scss
+++ b/assets/sass/_swiper.scss
@@ -151,6 +151,8 @@
     }
 
     @include media-breakpoint-down(sm) {
+      margin-bottom: 2.5rem;
+
       .swiper-nav {
         display: none;
       }
